# log-search-project

./: .gitignore  LICENSE  README.md
api-gateway-rails/: .gitignore  Dockerfile.gateway
api-gateway-rails/app/controllers/api/: search_controller.rb
api-gateway-rails/app/services/: cpp_search_service.rb
api-gateway-rails/config/: application.rb  credentials.yml.enc  deploy.yml  routes.rb
api-gateway-rails/config/initializers/: search_config.rb
core-cpp/: CMakeLists.txt  Dockerfile.core  index_manager.cpp  index_manager.hpp  indexer.cpp  log_search.cpp  searcher.cpp
utility-python/: Dockerfile.utility  generate_log.py  logs.py  requirements.txt
utility-python/tests/: test_log_generator.py
